RESOLVED FIXED40579
Fix clipping via CSS clip: with composited descendants
https://bugs.webkit.org/show_bug.cgi?id=40579
Summary Fix clipping via CSS clip: with composited descendants
Simon Fraser (smfr)
Reported 2010-06-14 11:36:21 PDT
Clipping via the CSS clip: property does not work correctly with composited descendants.
Attachments
Patch (18.59 KB, patch)
2010-06-15 11:29 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-06-15 11:29:51 PDT
mitz
Comment 2 2010-06-15 13:40:23 PDT
Comment on attachment 58799 [details] Patch > + (WebCore::clipBox): Utility function that returns the union of the clip and overflow s/union/intersection/
Simon Fraser (smfr)
Comment 3 2010-06-16 12:16:40 PDT
Note You need to log in before you can comment on or make changes to this bug.